# agent-passport-protocol

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
crates/kap-config/: Cargo.toml
crates/kap-config/src/: lib.rs
crates/kap-observability/: Cargo.toml
crates/kap-observability/src/: analytics.rs  init.rs  lib.rs  request_id.rs
crates/kap-policy/: Cargo.toml
crates/kap-policy/src/: lib.rs
crates/kitepass-api-types/: Cargo.toml
crates/kitepass-api-types/src/: access_keys.rs  agent_passports.rs  audit.rs  auth.rs  chains.rs  errors.rs  http.rs  lib.rs  operations.rs  passport_policies.rs  passports.rs  policies.rs  principal_auth.rs  provisioning.rs  relayer.rs  sessions.rs  signing.rs  wallets.rs
crates/kitepass-attestation/: Cargo.toml
crates/kitepass-attestation/src/: lib.rs
crates/kitepass-crypto/: Cargo.toml
crates/kitepass-crypto/src/: agent_key.rs  canonical.rs  capsule_encrypt.rs  digest.rs  encryption.rs  envelope.rs  hpke.rs  lib.rs  signatures.rs  verify.rs
scripts/: check_coverage.py  run_coverage_gate.sh
