[package]
name = "kitepass-crypto"
description = "Cryptographic primitives for Kite Agent Passport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = "0.3"
zeroize.workspace = true
thiserror.workspace = true
base64 = "0.22.1"
hkdf = "0.12.4"
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }

[dev-dependencies]
toml = "0.8"
